--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
 ujson==5.10.0
-uvicorn==0.30.1
+uvicorn
 watchfiles==0.22.0
 websockets==12.0
 databricks-sql-connector==3.0.0
